--- a/src/main/resources/assets/microdurability/lang/en_us.json
+++ b/src/main/resources/assets/microdurability/lang/en_us.json
@@ -5,5 +5,6 @@
   "text.autoconfig.microdurability.option.minDurability": "Minimum durability",
   "text.autoconfig.microdurability.option.minPercent": "Minimum percentage",
   "text.autoconfig.microdurability.option.blinkTime": "Armor bar blink speed (0 to disable)",
-  "text.autoconfig.microdurability.option.toolWarning": "Display the tool break warning"
+  "text.autoconfig.microdurability.option.toolWarning": "Display the tool break warning",
+  "text.autoconfig.microdurability.option.undamagedBars": "Display undamaged armor"
 }
