--- a/microdurability-core/src/main/resources/assets/microdurability/lang/en_us.json
+++ b/microdurability-core/src/main/resources/assets/microdurability/lang/en_us.json
@@ -1,10 +1,15 @@
 {
-  "text.autoconfig.microdurability.title": "microDurability",
-  "text.autoconfig.microdurability.option.requireMending.@PrefixText": "Low durability warning settings",
-  "text.autoconfig.microdurability.option.requireMending": "Require mending",
-  "text.autoconfig.microdurability.option.minDurability": "Minimum durability",
-  "text.autoconfig.microdurability.option.minPercent": "Minimum percentage",
-  "text.autoconfig.microdurability.option.blinkTime": "Armor bar blink speed (0 to disable)",
-  "text.autoconfig.microdurability.option.toolWarning": "Display the tool break warning",
-  "text.autoconfig.microdurability.option.undamagedBars": "Display undamaged armor"
+  "text.autoconfig.microdurability.title": "microDurability Config",
+
+  "text.autoconfig.microdurability.category.armorBars": "Armor Bars",
+  "text.autoconfig.microdurability.option.armorBars.displayArmorBars": "Display armor bars",
+  "text.autoconfig.microdurability.option.armorBars.displayBarsForUndamagedArmor": "Display bars for undamaged armor",
+
+  "text.autoconfig.microdurability.category.lowDurabilityWarning": "Low Durability Warning",
+  "text.autoconfig.microdurability.option.lowDurabilityWarning.displayWarningForTools": "Display warning for tools",
+  "text.autoconfig.microdurability.option.lowDurabilityWarning.displayWarningForArmor": "Display warning for armor",
+  "text.autoconfig.microdurability.option.lowDurabilityWarning.onlyOnMendingItems": "Display only on mending items",
+  "text.autoconfig.microdurability.option.lowDurabilityWarning.minDurabilityPointsBeforeWarning": "Minimum durability points before showing the warning",
+  "text.autoconfig.microdurability.option.lowDurabilityWarning.minDurabilityPercentageBeforeWarning": "Minimum durability percentage before showing the warning",
+  "text.autoconfig.microdurability.option.lowDurabilityWarning.blinkTime": "Armor bar blink speed"
 }
