--- a/microdurability-core/src/main/resources/assets/microdurability/lang/ru_ru.json
+++ b/microdurability-core/src/main/resources/assets/microdurability/lang/ru_ru.json
@@ -1,15 +1,15 @@
 {
-  "text.autoconfig.microdurability.title": "Конфигурация microDurability",
+  "text.autoconfig.microdurability.title": "Настройки microDurability",
 
-  "text.autoconfig.microdurability.category.armorBars": "Панели брони",
-  "text.autoconfig.microdurability.option.armorBars.displayArmorBars": "Отобразить панель брони",
-  "text.autoconfig.microdurability.option.armorBars.displayBarsForUndamagedArmor": "Отобразить панели для неповреждённой брони",
+  "text.autoconfig.microdurability.category.armorBars": "Индикаторы брони",
+  "text.autoconfig.microdurability.option.armorBars.displayArmorBars": "Отображать индикаторы брони",
+  "text.autoconfig.microdurability.option.armorBars.displayBarsForUndamagedArmor": "Отображать индикаторы для неповреждённой брони",
 
   "text.autoconfig.microdurability.category.lowDurabilityWarning": "Предупреждение о низкой прочности",
-  "text.autoconfig.microdurability.option.lowDurabilityWarning.displayWarningForTools": "Отобразить предупреждение для инструментов",
-  "text.autoconfig.microdurability.option.lowDurabilityWarning.displayWarningForArmor": "Отобразить предупреждение для брони",
-  "text.autoconfig.microdurability.option.lowDurabilityWarning.onlyOnMendingItems": "Отобразить только на починочных предметах",
-  "text.autoconfig.microdurability.option.lowDurabilityWarning.minDurabilityPointsBeforeWarning": "Минимум очков прочности до показа предупреждения",
-  "text.autoconfig.microdurability.option.lowDurabilityWarning.minDurabilityPercentageBeforeWarning": "Минимум % прочности до показа предупреждения",
-  "text.autoconfig.microdurability.option.lowDurabilityWarning.blinkTime": "Скорость мигания (в секундах)"
+  "text.autoconfig.microdurability.option.lowDurabilityWarning.displayWarningForTools": "Отображать предупреждение для инструментов",
+  "text.autoconfig.microdurability.option.lowDurabilityWarning.displayWarningForArmor": "Отображать предупреждение для брони",
+  "text.autoconfig.microdurability.option.lowDurabilityWarning.onlyOnMendingItems": "Отображать только на предметах с зачарованием \"Починка\"",
+  "text.autoconfig.microdurability.option.lowDurabilityWarning.minDurabilityPointsBeforeWarning": "Минимальный уровень прочности до показа предупреждения",
+  "text.autoconfig.microdurability.option.lowDurabilityWarning.minDurabilityPercentageBeforeWarning": "Минимальный % прочности до показа предупреждения",
+  "text.autoconfig.microdurability.option.lowDurabilityWarning.blinkTime": "Задержка между миганиями (в секундах)"
 }
