--- a/microdurability-core/src/main/resources/assets/microdurability/lang/en_us.json
+++ b/microdurability-core/src/main/resources/assets/microdurability/lang/en_us.json
@@ -10,6 +10,12 @@
   "text.autoconfig.microdurability.option.lowDurabilityWarning.displayWarningForArmor": "Display warning for armor",
   "text.autoconfig.microdurability.option.lowDurabilityWarning.onlyOnMendingItems": "Display only on mending items",
   "text.autoconfig.microdurability.option.lowDurabilityWarning.minDurabilityPointsBeforeWarning": "Minimum durability points before showing the warning",
+  "text.autoconfig.microdurability.option.lowDurabilityWarning.minDurabilityPointsBeforeWarning.@Tooltip": "An item's durability has to be below both the minimum point value and the minimum percentage for the warning to show!",
   "text.autoconfig.microdurability.option.lowDurabilityWarning.minDurabilityPercentageBeforeWarning": "Minimum durability percentage before showing the warning",
-  "text.autoconfig.microdurability.option.lowDurabilityWarning.blinkTime": "Blink speed (in seconds)"
+  "text.autoconfig.microdurability.option.lowDurabilityWarning.minDurabilityPercentageBeforeWarning.@Tooltip": "An item's durability has to be below both the minimum point value and the minimum percentage for the warning to show!",
+  "text.autoconfig.microdurability.option.lowDurabilityWarning.blinkTime": "Blink speed (in seconds)",
+  "text.autoconfig.microdurability.option.lowDurabilityWarning.blinkTime.@Tooltip": "Set to 0 to disable blinking.",
+
+  "modmenu.summaryTranslation.microdurability": "A very minimal durability viewer",
+  "modmenu.descriptionTranslation.microdurability": "A very minimal durability viewer"
 }
