--- a/microdurability-core/src/main/resources/assets/microdurability/lang/en_us.json
+++ b/microdurability-core/src/main/resources/assets/microdurability/lang/en_us.json
@@ -4,6 +4,7 @@
 	"text.autoconfig.microdurability.category.armorBars": "Armor Bars",
 	"text.autoconfig.microdurability.option.armorBars.displayArmorBars": "Display armor bars",
 	"text.autoconfig.microdurability.option.armorBars.displayBarsForUndamagedArmor": "Display bars for undamaged armor",
+	"text.autoconfig.microdurability.option.armorBars.yOffset": "Additional vertical offset",
 	"text.autoconfig.microdurability.option.armorBars.useCustomBarColorForUndamagedArmor": "Use custom bar color for undamaged armor",
 	"text.autoconfig.microdurability.option.armorBars.useCustomBarColorForUndamagedArmor.@Tooltip": "If an armor piece is undamaged, its bar will have the defined custom color.",
 	"text.autoconfig.microdurability.option.armorBars.customBarColorForUndamagedArmor": "Custom bar color for undamaged armor (#ARGB format)",
